Recursion homework updated